Improved DateTime/DateRange handling. Workaroud for createDateRange().recycle().